@@ -561,7 +561,7 @@ DECLARE_INTERFACE_(IRunningObjectTable,IUnknown)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(Register)(THIS_ LPUNKNOWN,LPMONIKER,PDWORD) PURE;
+	STDMETHOD(Register)(THIS_ DWORD,LPUNKNOWN,LPMONIKER,PDWORD) PURE;
 	STDMETHOD(Revoke)(THIS_ DWORD) PURE;
 	STDMETHOD(IsRunning)(THIS_ LPMONIKER) PURE;
 	STDMETHOD(GetObject)(THIS_ LPMONIKER,LPUNKNOWN*) PURE;
